--- a/html/login.html
+++ b/html/login.html
@@ -6,18 +6,18 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1 class="title">IIKANJIKANRIHYOU</h1><br>
-    <h2 class="login-text">ログイン</h2><br>
+  <div class="container" style="text-align: center;">
+    <h1 class="title" >IIKANJIKANRIHYOU</h1><br>
+    <h1 class="login-text">ログイン</h1><br>
    
     <form class="login-form">
-      <label for="email">メールアドレス</label>
-      <input type="email" id="email" placeholder="メールアドレスを入力してください"><br>
+    <label for="email">メールアドレス</label><br>
+      <input type="email" id="email" placeholder="メールアドレスを入力してください"><br><br>
      
-      <label for="password">パスワード</label>
-      <input type="password" id="password" placeholder="パスワードを入力してください"><br>
+      <label for="password">パスワード</label><br>
+      <input type="password" id="password" placeholder="パスワードを入力してください"><br><br>
      
-      <button type="submit" class="login-button">ログイン</button>
+      <button type="submit" class="login-button">ログイン</button><br><br>
     </form>
  
     <a href="#" class="signup-link">アカウント新規作成</a>
