--- a/html/login.html
+++ b/html/login.html
@@ -1,27 +1,29 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>ログイン</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>IIKANJIKANRIHYOU ログイン</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1 class="title">IIKANJIKANRIHYOU</h1><br>
-    <h2 class="login-text">ログイン</h2><br>
-   
-    <form class="login-form">
-      <label for="email">メールアドレス</label>
-      <input type="email" id="email" placeholder="メールアドレスを入力してください"><br>
-     
-      <label for="password">パスワード</label>
-      <input type="password" id="password" placeholder="パスワードを入力してください"><br>
-     
-      <button type="submit" class="login-button">ログイン</button>
-    </form>
  
-    <a href="#" class="signup-link">アカウント新規作成</a>
-  </div>
-</body>
-</html>
+  <!-- ログイン画面 -->
+<section class="container">
+<h1 class="title">IIKANJIKANRIHYOU</h1>
+<h2 class="subtitle">ログイン</h2>
+ 
+    <form class="form">
+<label>メールアドレス</label>
+<input type="email" placeholder="メールアドレスを入力してください">
+ 
+      <label>パスワード</label>
+<input type="password" placeholder="パスワードを入力してください">
+ 
+      <button type="submit">ログイン</button>
+</form>
+ 
+    <a href="#signup" class="link">アカウント新規作成</a>
+</section>
+
  
